[gd_scene load_steps=4 format=3 uid="uid://h60cra5dw2bk"]

[ext_resource type="Script" path="res://Scenes/UI/pause_menu.gd" id="1_3iig7"]

[sub_resource type="LabelSettings" id="LabelSettings_w1fg0"]
line_spacing = 1.0
font_size = 128

[sub_resource type="LabelSettings" id="LabelSettings_hvmms"]
font_size = 192

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3iig7")

[node name="Panel" type="Panel" parent="."]
process_mode = 2
custom_minimum_size = Vector2(600, 400)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverControls" type="Control" parent="Panel"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/GameOverControls"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -275.5
offset_right = 275.5
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverText" type="Label" parent="Panel/GameOverControls/VBoxContainer"]
layout_mode = 2
text = "Game Over"
label_settings = SubResource("LabelSettings_w1fg0")
uppercase = true

[node name="GameOverSubText" type="Label" parent="Panel/GameOverControls/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Cirana was knocked out by [thing]!
Hopefully she'll be safe..."
horizontal_alignment = 1

[node name="RetryButton" type="Button" parent="Panel/GameOverControls/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Restart level"

[node name="TitleButton" type="Button" parent="Panel/GameOverControls/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Return to Title Screen"

[node name="PauseControls" type="Control" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/PauseControls"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseText" type="Label" parent="Panel/PauseControls/VBoxContainer"]
layout_mode = 2
text = "Paused"
label_settings = SubResource("LabelSettings_hvmms")

[node name="ResumeButton" type="Button" parent="Panel/PauseControls/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Resume"

[node name="RetryButton" type="Button" parent="Panel/PauseControls/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Restart level"

[node name="TitleButton" type="Button" parent="Panel/PauseControls/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Return to Title Screen"

[node name="ExtraModeControls" type="Control" parent="Panel"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="Panel/GameOverControls/VBoxContainer/RetryButton" to="." method="_retry"]
[connection signal="pressed" from="Panel/GameOverControls/VBoxContainer/TitleButton" to="." method="_return_to_title"]
[connection signal="pressed" from="Panel/PauseControls/VBoxContainer/ResumeButton" to="." method="_resume"]
[connection signal="pressed" from="Panel/PauseControls/VBoxContainer/RetryButton" to="." method="_retry"]
[connection signal="pressed" from="Panel/PauseControls/VBoxContainer/TitleButton" to="." method="_return_to_title"]
